# IoTmoney

./: .gitignore  .proofofconsistancy.aux  CONTRIBUTING.md  Cargo.toml  Dockerfile  P1  README.md  SPECS.md  docker-compose.yml  proof.v  proofofconsistancy.glob  proofofconsistancy.v
.devcontainer/: devcontainer.json
docs/: detailedspecs.md  dev_guide.md  properties.md
docs/guides/: DESIGN.md  SPECS.md  iotmwp.md  moneywp.txt
src/: FOUNDATIONALCODE.rs  main.rs  optimization.rs  quality_assurance.rs  resource_management.rs  scaling_techniques.rs
src/blockchain/: block.rs  checkpoint.rs  checkpointing.rs  receipts_and_block_signing.rs  transaction.rs
src/consensus/: asynchronous_validation.rs  blst_dalek.rs  consensus.rs  consensus_protocol.rs  erasure.rs  erasure_coding.rs  fraud_detection.rs  merkle_trie_root.rs  mod.rs  rust_sss.rs  secret_sharing.rs  signature_aggregation.rs
src/database/: database.rs
src/execution/: blake3.rs  cache.rs  ed25519_dalek.rs  execution.rs  mod.rs  parity_substrate_triedb.rs  shard.rs  wasm_pack.rs  wasmer_runtime.rs
src/network/: epidemic_shard.rs  libp2p_network.rs  network.rs  networking.rs  noise.rs  topology.rs
src/security/: security.rs
src/state/: state_managment.rs  syncronization.rs
src/storage/: storage.rs
src/testing/: testing.rs
src/topology/: adaptive_networking.rs  cross_shard_communication.rs  id.rs  load_balance.rs  load_monitor.rs  mod.rs  shard.rs  shard_reconfiguration.rs  shard_split.rs  sierpinski.rs  topology_manager.rs
src/trie/: trie.rs
src/user_interface/: client_types.rs
